<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical|center_horizontal|clip_vertical"
        android:onClick="registrarse"
        android:text="@string/Register" />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="50dp"
        android:onClick="volver"
        android:text="@string/Return" />

    <Button
        android:id="@+id/Logarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        android:onClick="login"
        android:text="@string/Login" />

</LinearLayout>
